# geminicli2api

./: ARCHITECTURE.md  README.md  pyproject.toml  railway.json
src/: config.py  main.py
src/models/: __init__.py  gemini.py  helpers.py
src/routes/: anthropic.py  gemini.py  openai.py  responses.py  utils.py
src/routes/transformers/: __init__.py  anthropic.py  anthropic_stream.py  openai.py  responses.py
src/schemas/: anthropic.py  openai.py
src/services/: auth.py  gemini_client.py
src/services/auth/: __init__.py  credential_pool.py  credentials.py  middleware.py  oauth.py  onboarding.py
tests/: test_anthropic_transformer.py  test_auth.py  test_function_calling.py  test_gemini_client.py  test_multi_credential.py  test_openai_transformer.py  test_responses_transformer.py  test_routes.py
